[Eko] - book request validation
